--- a/css/main.css
+++ b/css/main.css
@@ -9,14 +9,16 @@ html {
   border-color: #97a49b;
 }
 
-img {
-  max-height: 500px;
+h1 {
+  margin-bottom: 0;
 }
 
 @media only screen and (min-width: 60em) {
 
   .banner {
     position: relative;
+    max-height: 500px;
+    overflow: hidden;
   }
 
   html {
